# iot-project

./: CMakeLists.txt  INSTALL  Packaging.cmake  README  TODO  todo.txt
Builder/: CMakeLists.txt  INSTALL  pack.sh
backward_chaining/: CMakeLists.txt  todo
backward_chaining/ZiaParser/: CMakeLists.txt  Makefile  UnitTesting  ZiaParserSample
backward_chaining/ZiaParser/headers/: BasicRules.h  DateRules.h  ParsingResult.h  RequestHeaderGrammar.hpp  RequestHeaderParser.h  TestRules.h  ZiaException.h
backward_chaining/ZiaParser/src/: RequestHeaderParser.cpp  ZiaException.cpp  main.cpp
backward_chaining/ZiaParser/unitTesting/: main.cpp
backward_chaining/headers/: Fact.h  FactSet.h  IOper.h  Rule.h  RuleSet.h  Tribool.h  backward_chaining.h  eval.h  parsing.hpp
backward_chaining/sample/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  testCustom2.txt  testcustom1.txt
backward_chaining/src/: Fact.cpp  FactSet.cpp  IOper.cpp  Rule.cpp  RuleSet.cpp  Tribool.cpp  backward_chaining.cpp  eval.cpp  main.cpp
backward_chaining/test/: tst1.txt
builder/: 640_300_azerty.xml  640_300_azerty.xml-withspecialchar  BoxEditor.ui  CMakeLists.txt  FindPyInstaller.cmake  Help.ui  INSTALL  KNOWN_BUGS  Packaging.cmake  ProgName.ui  README  TODO  TODO_IDEAS  UsePyInstaller.cmake  action.py  box.py  boxeditor.py  boxstyle.py  builder  builder.py  help.py  icons_rc.py  keyboard.xml  keyboardgenerator.py  main.py  node.py  progname.py  resources.qrc  setup.py  setup.sh  shortcuts.py  static.bat  static.sh  toolbar.py
ceg/: CEG.pro  CMakeLists.txt  INSTALL  Packaging.cmake  README  TODO  build_mingw_release.bat  build_vs2008_release.bat  ceg.rc  qtVersion.pro  update_translations
ceg/MyAweSomeCEG/: Layout.cpp  Layout.h  MyAweSomeBox.cpp  MyAweSomeBox.h  MyAweSomeCEG.pro  main.cpp
ceg/application/: CMakeLists.txt
ceg/application/example/: CMakeLists.txt
ceg/cegGtk/src/: Layer.cpp  Layer.h  MenuGrid.cpp  MenuWindow.h  WindowManager.cpp
ceg/cegGtk/test/: t-keypressed.cpp  t-monitoring.cpp  t-window_in_window.cpp
ceg/cegQt/: CMakeLists.txt  qtVersion.pro
ceg/cegQt/doc/: qtVersion.dia
ceg/cegQt/includes/: AbstractBox.h  AbstractItem.h  AbstractScene.h  BoxManager.h  DefaultItem.h  GraphicItemFactory.h  Layer.h  LayerManager.h  Layout.h  Win32Adaptor.h  Win32Explorer.h  Window.h  WindowGeometry.h  XWindowSystem.h
ceg/cegQt/src/: AbstractBox.cpp  AbstractItem.cpp  AbstractScene.cpp  BoxManager.cpp  CMakeLists.txt  DefaultItem.cpp  GraphicItemFactory.cpp  Layer.cpp  LayerManager.cpp  Layout.cpp  Win32Explorer.cpp  Window.cpp  main.cpp
ceg/cegQt/testQt/: IOT.pro
ceg/config/: CMakeLists.txt  boxes.xsd  config.txt  firefox.xml  sample.xml
ceg/config/boxes/: CMakeLists.txt  firefox.xml  mytest.xml  sample.xml-dist
ceg/config/log4cxx/: FindLog4Cxx.cmake  INSTALL  README  UnixConfig.xml  WindowsConfig.xml
ceg/config/menus/: ApplicationMenu.xml  CMakeLists.txt  EventMenu.xml  HomeMenu.xml  KeyboardMenu.xml  MultimediaMenu.xml  MultimediaMenu_en_US.xml  NavigationMenu.xml
ceg/doc/: Action  CMakeLists.txt  TODO  ceg-uml.dia  doxyfile.cmake  emacs_macros.el  infoLog4cxx  py_file_header.txt  qtVersion.dia  uml.dia  umlQT.dia  xmlBox.xml  xmlMenu.xml
ceg/forms/: CMakeLists.txt  settings.ui  settingsDialog.ui
ceg/includes/: AbstractBox.h  AbstractItem.h  AbstractScene.h  ActionFactory.h  Box.h  BoxController.h  BoxManager.h  BoxParameter.h  BoxStyle.h  BoxType.h  CMakeLists.txt  CegServer.h  CegTcpServer.h  ClickAction.h  ClickType.h  CustomItem.h  DefaultItem.h  EventMenuAction.h  GraphicItemFactory.h  IAction.h  ICommunicationGraphicalServer.h  IDomFactory.h  IXmlNode.h  Layer.h  LayerManager.h  Logger.h  MainController.h  Menu.h  MenuItem.h  MoveAction.h  QuitHandler.h  ReadAction.h  Settings.h  SettingsDialog.h  Singleton.hpp  Systray.h  TypeToString.hpp  Utils.h  View.h  Win32Adaptor.h  (+7 more)
ceg/includes/Action/: Action  ActionFactory.h  CancelAction.h  ClickAction.h  CloseAction.h  EventMenuAction.h  ExecMenuAction.h  ExecProcessAction.h  IAction.h  KeyboardAction.h  MoveAction.h  PopMenuAction.h  QuitAction.h  ReadAction.h  ValidAction.h  WriteAction.h  ZoomAction.h
ceg/qtVersion/: Layout.h  MyAweSomeBox.h  main.cpp  qtVersion.pro
ceg/qtVersion/includes/: AbstractItem.h  AbstractScene.h  DefaultItem.h  Layer.h
ceg/qtVersion/src/: AbstractItem.cpp  AbstractScene.cpp  BoxManager.cpp  DefaultItem.cpp  main.cpp
ceg/resources/: CMakeLists.txt  application.qrc  images.qrc
ceg/resources/images/: CMakeLists.txt
ceg/resources/translations/: ceg_en_US.ts  ceg_fr.ts
ceg/resources/xsd/: boxes.xsd
ceg/scripts/: mingw32-build
ceg/share/applications/: ceg.desktop
ceg/src/: AbstractBox.cpp  AbstractItem.cpp  AbstractScene.cpp  ActionFactory.cpp  Area.cpp  Area.h  Box.cpp  BoxController.cpp  BoxManager.cpp  BoxParameter.cpp  BoxStyle.cpp  CMakeLists.txt  CegServer.cpp  CegTcpServer.cpp  ClickAction.cpp  CommonWindow.cpp  CustomItem.cpp  DefaultGrid.cpp  DefaultItem.cpp  EventMenuAction.cpp  EventMenuGrid.h  GraphicItemFactory.cpp  Grid.cpp  Grid.h  Layer.cpp  LayerManager.cpp  Logger.cpp  MainController.cpp  Menu.cpp  MenuArea.cpp  MenuArea.h  MenuItem.cpp  MenuWindow.cpp  MoveAction.cpp  NavigationMenuGrid.h  QuitHandler.cpp  ReadAction.cpp  Settings.cpp  SettingsDialog.cpp  Systray.cpp  (+10 more)
ceg/src/Action/: ActionFactory.cpp  CMakeLists.txt  CancelAction.cpp  ClickAction.cpp  CloseAction.cpp  EventMenuAction.cpp  ExecMenuAction.cpp  ExecProcessAction.cpp  KeyboardAction.cpp  MoveAction.cpp  PopMenuAction.cpp  QuitAction.cpp  ReadAction.cpp  ValidAction.cpp  WriteAction.cpp  ZoomAction.cpp
ceg/test/: CMakeLists.txt  firefox.xml  gvncviewer.txt  how_to_analyze_xsd_from_command_line.txt  menu.xml  qtxml.cpp  sax.cpp  schema.xsd  t-XEvent.cpp  t-gtk2.cpp  t-logger.cpp  t-plug.cpp  t-print_window_names_on_X11.cpp  t-smallmatrix.cpp  t-socket.cpp  t-timerexample.cpp  t-transparency.cpp  t-transparency2.cpp  t-transparency_easy_way.cpp  t-vnc_ev.cpp  t-vnc_simple.cpp  validator.cpp  xmlBox.xml
ceg/translations/: CMakeLists.txt  ceg_en_US.ts  ceg_fr.ts  ceg_fr_FR.ts
(+183 files in other folders)
