CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(builder)

SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 0)
SET(PROJECT_VERSION_PATCH 0)
SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single output directory for building all executables.")
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single output directory for building all libraries.")
MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)


FIND_PACKAGE(PyInstaller REQUIRED)
INCLUDE(UsePyInstaller)

SET(PY_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/builder.py)
ADD_PI_EXECUTABLE({PROJECT_NAME} ${PY_SOURCES})


# INSTALL(
#   TARGETS ${PROJECT_NAME}
#   RUNTIME
#   DESTINATION bin
#   COMPONENT applications
#   )

INCLUDE(Packaging.cmake)
