######################################################################################
### 1) Where must cmake go now ?
######################################################################################

#ADD_SUBDIRECTORY(example)
######################################################################################
ADD_SUBDIRECTORY(communicationGS)