######################################################################################
### 1) Create dynamic library for Action classes
######################################################################################

SET(LIBRARY_OUTPUT_PATH ${IOT_CEG_BIN_DIR}/lib)

FILE(GLOB ACTION_SRCS *.cpp)
ADD_LIBRARY(action ${ACTION_SRCS})

######################################################################################
