CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(communicationGS)

INCLUDE(FindPkgConfig)
INCLUDE(FindX11)

PKG_CHECK_MODULES(XMU xmu)

IF (UNIX)
  IF (CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3")
  ENDIF()
ENDIF()


INCLUDE_DIRECTORIES(includes)
IF (X11_FOUND)
   INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
   LINK_DIRECTORIES(${XMU_LIBRARY_DIRS})
ENDIF()

FILE(
  GLOB_RECURSE
  source_files
  src/*
  )

IF (UNIX)
  LIST (REMOVE_ITEM source_files "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32Explorer.cpp")
  LIST (REMOVE_ITEM source_files "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32Adaptor.cpp")
ELSE (WIN32)
  LIST (REMOVE_ITEM source_files "${CMAKE_CURRENT_SOURCE_DIR}/src/XWindowSystem.cpp")
ENDIF()

ADD_EXECUTABLE(
  communicationGS
  ${source_files}
)

MESSAGE(STATUS ${XMU_LIBRARIES})

TARGET_LINK_LIBRARIES(communicationGS ${X11_LIBRARIES} ${XMU_LIBRARIES})
